--- a/Resources/views/Menu/topMenuFromFolder.html.twig
+++ b/Resources/views/Menu/topMenuFromFolder.html.twig
@@ -1,14 +1,14 @@
 <div class="top-menu">
     <ul>
         {% for menuItem in menuTree %}
-            <li {% if menuItem.link is defined %}onclick="location.href='{{ menuItem.link }}'"{% endif %}>
+            <li {% if menuItem.link is defined %}onclick="location.href='{{ menuItem.link }}'"{% endif %} {% if menuItem.active %}class="active"{% endif %}>
                 {% if menuItem.link is defined %}
                     <a href="{{ menuItem.link }}">{{ menuItem.name }}</a>
                 {% elseif ( menuItem.children is defined ) and ( menuItem.children|length > 0 ) %}
                     {{ menuItem.name }}
                     <ul>
                         {% for subMenuItem in menuItem.children %}
-                            <li {% if subMenuItem.link is defined %}onclick="location.href='{{ subMenuItem.link }}'"{% endif %}>
+                            <li {% if subMenuItem.link is defined %}onclick="location.href='{{ subMenuItem.link }}'"{% endif %} {% if subMenuItem.active %}class="active"{% endif %}>
                                 {% if subMenuItem.link is defined %}
                                     <a href="{{ subMenuItem.link }}">{{ subMenuItem.name }}</a>
                                 {% endif %}
