if the location of an injecting sub-location to directly link to is a "link" it can be clicked too now

--- a/Resources/views/Menu/topMenuFromFolder.html.twig
+++ b/Resources/views/Menu/topMenuFromFolder.html.twig
@@ -2,10 +2,14 @@
     <ul>
         {% for menuItem in menuTree %}
             <li {% if menuItem.link is defined %}onclick="location.href='{{ menuItem.link }}'"{% endif %} {% if menuItem.active %}class="active"{% endif %}>
+
                 {% if menuItem.link is defined %}
                     <a href="{{ menuItem.link }}">{{ menuItem.name }}</a>
-                {% elseif ( menuItem.children is defined ) and ( menuItem.children|length > 0 ) %}
+                {% else %}
                     {{ menuItem.name }}
+                {% endif %}
+
+                {% if ( menuItem.children is defined ) and ( menuItem.children|length > 0 ) %}
                     <ul>
                         {% for subMenuItem in menuItem.children %}
                             <li {% if subMenuItem.link is defined %}onclick="location.href='{{ subMenuItem.link }}'"{% endif %} {% if subMenuItem.active %}class="active"{% endif %}>
